[gd_scene load_steps=30 format=3 uid="uid://b62d811jwymmd"]

[ext_resource type="Script" path="res://scenes/ui/race_ui.gd" id="1_23b1w"]
[ext_resource type="PackedScene" uid="uid://cgubbv13lvah8" path="res://scenes/ui/player_info_box.tscn" id="2_64c26"]
[ext_resource type="PackedScene" uid="uid://b4ktan2k4miry" path="res://scenes/ui/item_roulette.tscn" id="3_xg3tb"]
[ext_resource type="PackedScene" uid="uid://2ani3pyd27xg" path="res://scenes/ui/nametag.tscn" id="4_5a5qs"]
[ext_resource type="Texture2D" uid="uid://cf2x8b1awq2b5" path="res://assets/race/startline.png" id="5_s54dk"]
[ext_resource type="PackedScene" uid="uid://ttgvsua40ods" path="res://scenes/ui/race/alert.tscn" id="6_1cm01"]
[ext_resource type="LabelSettings" uid="uid://dg8cn7dsip001" path="res://scenes/ui/_styles/basic_text.tres" id="7_fx38p"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="8_getyi"]

[sub_resource type="ViewportTexture" id="ViewportTexture_5eh43"]
viewport_path = NodePath("ItemBox/Viewport")

[sub_resource type="Environment" id="Environment_5a2to"]

[sub_resource type="Animation" id="Animation_jux7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemRoulette:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sqxjf"]
resource_name = "rotate"
length = 0.5
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemRoulette:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.5708, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_rotate_end"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ux71x"]
_data = {
"RESET": SubResource("Animation_jux7s"),
"rotate": SubResource("Animation_sqxjf")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_i2ab8"]
viewport_path = NodePath("MapContainer/MapTexture/MapViewport")

[sub_resource type="LabelSettings" id="LabelSettings_11ql6"]
font_size = 50
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_esb4h"]
font_size = 100
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7j71x"]
font_size = 45
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_80x08"]
font_size = 25
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ptjgw"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gj5rm"]
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t3q3l"]
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_saaky"]
font_size = 30
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x4rd4"]
font_size = 25
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pqt07"]
font_size = 85
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_wlpck"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_eman3"]
resource_name = "change"
length = 0.2
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.25, -0.25, 0, 0, 0.000169516, 0.9, -0.1, 0, 0.02, 0, 1, -0.02, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.15, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.25, -0.25, 0, 0, 0, 0.9, -0.1, 0, 0.02, 0, 1, -0.02, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.15, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k88iy"]
_data = {
"RESET": SubResource("Animation_wlpck"),
"change": SubResource("Animation_eman3")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13nhv"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.162066, 0.162066, 0.162066, 0.815686)

[sub_resource type="LabelSettings" id="LabelSettings_pt0yc"]
font_size = 40

[node name="RaceUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_23b1w")
info_box_scene = ExtResource("2_64c26")
nametag_scene = ExtResource("4_5a5qs")
alert_scene = ExtResource("6_1cm01")

[node name="Nametags" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemBox" type="TextureRect" parent="."]
process_mode = 1
visible = false
offset_right = 215.0
offset_bottom = 210.0
texture = SubResource("ViewportTexture_5eh43")
expand_mode = 1
stretch_mode = 4

[node name="Viewport" type="SubViewport" parent="ItemBox"]
transparent_bg = true

[node name="ItemRoulette" parent="ItemBox/Viewport" instance=ExtResource("3_xg3tb")]
transform = Transform3D(0.5, 0, 0, 0, -1.81e-06, -0.5, 0, 0.5, -1.81e-06, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="ItemBox/Viewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.88955)
cull_mask = 524288
environment = SubResource("Environment_5a2to")
fov = 40.3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ItemBox/Viewport"]
transform = Transform3D(0.611568, 0.4818, -0.627577, 0, 0.793205, 0.608955, 0.791192, -0.372418, 0.485099, 0, 0.0729002, 2.78216)
layers = 524288
light_energy = 1.5
light_cull_mask = 4294443008

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="ItemBox/Viewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0729002, 2.78216)
layers = 524288
light_energy = 0.5
light_cull_mask = 4294443008

[node name="AnimationPlayer" type="AnimationPlayer" parent="ItemBox/Viewport"]
deterministic = true
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_ux71x")
}

[node name="MapContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="MapTexture" type="TextureRect" parent="MapContainer"]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -512.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("ViewportTexture_i2ab8")
expand_mode = 1
stretch_mode = 4

[node name="MapViewport" type="SubViewport" parent="MapContainer/MapTexture"]
transparent_bg = true
size = Vector2i(1024, 1024)

[node name="StartLineMarker" type="Sprite2D" parent="MapContainer"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_s54dk")
region_rect = Rect2(0, 0, 80, 20)

[node name="PlayerIcons" type="Control" parent="MapContainer"]
anchors_preset = 0

[node name="Speed" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -86.0
offset_right = -27.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_11ql6")
horizontal_alignment = 2
vertical_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Ranks" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -39.0
offset_right = 130.0
offset_bottom = -11.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
vertical_alignment = 2

[node name="Countdown" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_esb4h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LapCountContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -204.0
offset_top = 114.0
offset_right = -60.0
offset_bottom = 177.0
grow_horizontal = 0
alignment = 2

[node name="CurLap" type="Label" parent="LapCountContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45
label_settings = SubResource("LabelSettings_7j71x")
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="LapCountContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 7

[node name="MaxLaps" type="Label" parent="LapCountContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 25
text = "/3"
label_settings = SubResource("LabelSettings_80x08")
vertical_alignment = 2

[node name="Finished" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -63.0
offset_right = 108.5
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
text = "RACE_FINISHED"
label_settings = SubResource("LabelSettings_ptjgw")
horizontal_alignment = 1

[node name="RaceOver" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = 17.0
offset_right = 102.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
text = "RACE_OVER"
label_settings = SubResource("LabelSettings_gj5rm")
horizontal_alignment = 1

[node name="Spectating" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.5
offset_top = 2.0
offset_right = 101.5
offset_bottom = 57.0
grow_horizontal = 2
text = "RACE_SPECTATING"
label_settings = SubResource("LabelSettings_t3q3l")
horizontal_alignment = 1

[node name="Username" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -71.0
offset_right = 82.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
label_settings = SubResource("LabelSettings_saaky")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Time" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_top = -4.0
offset_right = -13.0
offset_bottom = 51.0
grow_horizontal = 0
label_settings = ExtResource("7_fx38p")
horizontal_alignment = 2

[node name="Rankings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TimeLeft" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_right = -11.0
offset_bottom = 35.0
grow_horizontal = 0
label_settings = SubResource("LabelSettings_x4rd4")
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="Alerts" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rank" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = -147.0
offset_right = 361.0
offset_bottom = -36.9999
grow_vertical = 0
pivot_offset = Vector2(15.055, 90.069)
theme_override_font_sizes/font_size = 100
text = "1st"
label_settings = SubResource("LabelSettings_pqt07")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rank"]
libraries = {
"": SubResource("AnimationLibrary_k88iy")
}

[node name="BackToLobby" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_top = -66.0
offset_right = 103.5
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
disabled = true
text = "RACE_BTN_BACK"

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 2
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_getyi")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.262745)

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/ColorRect"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_13nhv")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ColorRect/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LblPauseHeader" type="Label" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RACE_PAUSE_HEADER"
label_settings = SubResource("LabelSettings_pt0yc")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnPauseContinue" type="Button" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../BtnPauseExit")
theme_override_font_sizes/font_size = 30
text = "RACE_PAUSE_CONTINUE"

[node name="BtnPauseRestart" type="Button" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RACE_PAUSE_RESTART"

[node name="BtnPauseVehicle" type="Button" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RACE_PAUSE_VEHICLE"

[node name="BtnPauseCharacter" type="Button" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RACE_PAUSE_CHARACTER"

[node name="BtnPauseExit" type="Button" parent="PauseMenu/ColorRect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../BtnPauseContinue")
theme_override_font_sizes/font_size = 30
text = "RACE_PAUSE_EXIT"

[connection signal="button_down" from="PauseMenu/ColorRect/PanelContainer/VBoxContainer/BtnPauseContinue" to="PauseMenu" method="_on_btn_pause_continue_button_down"]
[connection signal="button_down" from="PauseMenu/ColorRect/PanelContainer/VBoxContainer/BtnPauseExit" to="PauseMenu" method="_on_btn_pause_exit_button_down"]
